[alloc @ alla@mint-20061121173315-c9fae3bbb2521464] Adjusted padding in tab links to correct alignment.

--- a/stylesheets/style_leaf_6.css
+++ b/stylesheets/style_leaf_6.css
@@ -140,7 +140,7 @@ div.tab a {
   text-decoration:none;
   position:relative;
   top:8px;
-  padding: 5px 15px;
+  padding: 5px 10px;
 }
 
 div.tab a:link          { color:#5c7600;  }
